--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ var/
 .installed.cfg
 *.egg
 temp.sh
+brr.sh
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -52,3 +53,4 @@ docs/_build/
 
 # PyBuilder
 target/
+.DS_Store
